--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
             - Change the number to point to your Unemployable & replace the OpenSea link with your own
             - If you aren't using an Unemployable as your image, remove the entire "a" element
           -->
-          <img src="./assets/images/1311.png" class="portfolio-header-image">
-          <a class="no-underline" target="_blank" href="https://opensea.io/assets/0xe0be388ab81c47b0f098d2030a1c9ef190691a8a/1311">
-            <span class="image-caption">Unemployables #1311</span>
+          <img src="./assets/images/img_2sq.jpg" class="portfolio-header-image">
+          <a class="no-underline" target="_blank" href="https://www.google.com/maps/@39.3528162,-9.3790001,3a,75y,114.77h,97.78t/data=!3m8!1e1!3m6!1sAF1QipNrvSuZo5BjbA4Rmnlwqgzr09rrHjr3JuKOk0AC!2e10!3e11!6shttps:%2F%2Flh5.googleusercontent.com%2Fp%2FAF1QipNrvSuZo5BjbA4Rmnlwqgzr09rrHjr3JuKOk0AC%3Dw203-h100-k-no-pi-0-ya79.352715-ro-0-fo100!7i8704!8i4352?hl=en">
+            <span class="image-caption">Tetrapods in Portugal</span>
           </a>
         </div>
 
@@ -65,8 +65,8 @@
           -->
         <div id="portfolio-header-text-container">
             <div class="header-text">
-              <span class="main-title">Hey, I'm @ndoherty_eth.</span>
-              <div class="body-text">I’m a freelance designer and developer who aims to help other creatives build out their portfolios, skillset, and businesses.</div>
+              <span class="main-title">Hey, I'm Kyle Landon.</span>
+              <div class="body-text">I’m a Coastal Engineer and GIS Manager at Moffatt & Nichol.</div>
             </div>
             <a class="button" id="my-work-link">
               <span class="button-text">Check out my projects</span> 
@@ -85,8 +85,8 @@
       <div id="about-section">
         <span class="subheader-text">My Background / About Me</span>
         <div class="about-section-content">
-          <div class="body-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Tristique risus nec feugiat in fermentum. Sed id semper risus in hendrerit gravida. Placerat duis ultricies lacus sed. Id neque aliquam vestibulum morbi blandit cursus risus. Elit pellentesque habitant morbi tristique senectus et netus et. Elementum tempus egestas sed sed risus pretium quam. Nibh ipsum consequat nisl vel pretium lectus quam id leo. Vitae congue mauris rhoncus aenean vel elit.</div>
-          <div class="body-text">Vitae justo eget magna fermentum. Imperdiet nulla malesuada pellentesque elit eget gravida. Aliquet nec ullamcorper sit amet. Aliquet sagittis id consectetur purus. Ac tortor dignissim convallis aenean. Enim neque volutpat ac tincidunt vitae. Lobortis feugiat vivamus at augue. Platea dictumst vestibulum rhoncus est pellentesque elit ullamcorper. Viverra orci sagittis eu volutpat. Massa tincidunt nunc pulvinar sapien et ligula. Donec enim diam vulputate ut.</div>
+          <div class="body-text">I'm a Coastal Engineer with over 10 years of experience developing innovative approaches and designs to address a wide range of coastal problems. Common projects or analysis I conduct include SLR and coastal flooding analysis, wetland and beach restoration, erosion analysis, extreme value analysis for coastal hazards, GIS data collection and manipulation, channel design, dredging design, and design of shore protection structures</div>
+          <div class="body-text">I graduated with a Master of Ocean Engineering from Oregon State University and Bachelor of Science in Civil Engineering from UC Davis. I've worked at M&N for over 10 years.</div>
         </div>
       </div>
 
@@ -119,36 +119,37 @@
                 - PROJECT_PAGE_NAME.html: the html filename for the project (must be in project-pages folder)
           -->
           <div class="project-card">
-            <img src="./assets/images/desktop.jpeg" class="project-image">
+            <img src="./assets/images/cardiff.jpg" class="project-image">
             <div class="project-card-text-container">
-              <div class="subheader-text project-title">Project Name</div>
-              <div class="body-text project-card-text">Elit pellentesque habitant morbi tristique senectus et netus et. Elementum tempus egestas sed sed risus pretium quam. Nibh ipsum consequat nisl vel pretium</div>
+              <div class="subheader-text project-title">Cardiff Living Shoreline</div>
+              <div class="body-text project-card-text">Burried cobble berm beach restoration project with XBEACH modeling in Cardiff, California</div>
             </div>
-            <a class="button" href="./project-pages/project-template.html">
+           <!-- <a class="button" href="./project-pages/project-template.html">
               <span class="button-text">Read More</span>
               <image src="./assets/icons/arrow-right.svg" class="right-arrow-icon"/>
-            </a>
+            </a> -->
           </div>
           <div class="project-card">
-            <img src="./assets/images/code.jpeg" class="project-image">
+            <img src="./assets/images/cb.jpg" class="project-image">
             <div class="project-card-text-container">
-              <div class="subheader-text project-title">Project Name</div>
-              <div class="body-text project-card-text">Elit pellentesque habitant morbi tristique senectus et netus et. Elementum tempus egestas sed sed risus pretium quam. Nibh ipsum consequat nisl vel pretium</div>
+              <div class="subheader-text project-title">Coos Bay</div>
+              <div class="body-text project-card-text">Channel Design, ATON design, Jetty Repairs, and Propwash Analysis in Coos Bay Oregon.</div>
             </div>
-            <a class="button" href="./project-pages/project-template.html">
+           <!-- <a class="button" href="./project-pages/project-template.html">
               <span class="button-text">Read More</span>
               <image src="./assets/icons/arrow-right.svg" class="right-arrow-icon"/>
-            </a>
+            </a> -->
           </div>
           <div class="project-card">
-            <img src="./assets/images/sketchbook.jpeg" class="project-image">
+            <img src="./assets/images/piledikes.jpg" class="project-image">
             <div class="project-card-text-container">
-              <div class="subheader-text project-title">Super Long Project Name That Should be Hidden</div>
-              <div class="body-text project-card-text">Elit pellentesque habitant morbi tristique senectus et netus et. Elementum tempus egestas sed sed risus pretium quam. Nibh ipsum consequat nisl vel pretium</div>
+              <div class="subheader-text project-title">Columbia River Pile Dike Repair</div>
+              <div class="body-text project-card-text">Design of repairs to numerous Lower Columbia River pile dike systems</div>
             </div>
-            <a class="button" href="./project-pages/project-template.html">
+           <!-- <a class="button" href="./project-pages/project-template.html">
               <span class="button-text">Read More</span>
               <image src="./assets/icons/arrow-right.svg" class="right-arrow-icon"/>
+            </a> -->
             </a>
           </div>
         </div>
@@ -162,7 +163,7 @@
 
         This should be the same across all pages.
       -->
-      <a class="icon-link" target="_blank" href="https://twitter.com/whitevans_eth">
+      <a class="icon-link" target="_blank" href="https://www.instagram.com/landonky/">
         <image src="./assets/icons/instagram.svg" class="footer-icon"/>
       </a>
       <!-- 
@@ -170,7 +171,7 @@
       
         This should be the same across all pages.
       -->
-      <a class="icon-link" target="_blank" href="https://twitter.com/whitevans_eth">
+      <a class="icon-link" target="_blank" href="https://twitter.com/kyle_landon">
         <image src="./assets/icons/twitter.svg" class="footer-icon"/>
       </a>
       <!-- 
@@ -178,7 +179,7 @@
       
         This should be the same across all pages.
       -->
-      <a class="icon-link" href="mailto:whitevans.eth@gmail.com">
+      <a class="icon-link" href="mailto:klandon@moffattnichol.com">
         <image src="./assets/icons/mail.svg" class="footer-icon"/>
       </a>
     </div>
