--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
      -->
     <link rel="icon" href="./assets/images/1311.png" />
 		<title>Unemployables Portfolio</title>
-    <meta name="description" content="A portfolio template for the Unemployables community.">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
 		<link rel="stylesheet" href="./css/layout.css">
@@ -50,7 +49,7 @@
             - Change the number to point to your Unemployable & replace the OpenSea link with your own
             - If you aren't using an Unemployable as your image, remove the entire "a" element
           -->
-          <img src="./assets/images/img_2sq.jpg" class="portfolio-header-image">
+          <img src="./assets/images/IMG_2sq.jpg" class="portfolio-header-image">
           <a class="no-underline" target="_blank" href="https://www.google.com/maps/@39.3528162,-9.3790001,3a,75y,114.77h,97.78t/data=!3m8!1e1!3m6!1sAF1QipNrvSuZo5BjbA4Rmnlwqgzr09rrHjr3JuKOk0AC!2e10!3e11!6shttps:%2F%2Flh5.googleusercontent.com%2Fp%2FAF1QipNrvSuZo5BjbA4Rmnlwqgzr09rrHjr3JuKOk0AC%3Dw203-h100-k-no-pi-0-ya79.352715-ro-0-fo100!7i8704!8i4352?hl=en">
             <span class="image-caption">Tetrapods in Portugal</span>
           </a>
