--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       This should be the same across all pages.
      -->
     <link rel="icon" href="./assets/images/1311.png" />
-		<title>Unemployables Portfolio</title>
+		<title>Kyle Landon</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
 		<link rel="stylesheet" href="./css/layout.css">
@@ -30,7 +30,7 @@
         <!-- TODO - Change the "Portfolio Title" to whatever you want displayed in the top left -->
         <span class="nav-title">Portfolio Title</span>
          <!-- TODO - Change the email after 'mailto:' to your email address for contact -->
-        <a class="button" href="mailto:whitevans.eth@gmail.com">
+        <a class="button" href="mailto:klandon@moffattnichol.com">
           <span class="button-text">Contact Me</span>
         </a>
       </a>
