--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <div class="navbar">
       <a class="nav-title-link" href="./index.html">
         <!-- TODO - Change the "Portfolio Title" to whatever you want displayed in the top left -->
-        <span class="nav-title">Portfolio Title</span>
+        <span class="nav-title">Kyle Landon</span>
          <!-- TODO - Change the email after 'mailto:' to your email address for contact -->
         <a class="button" href="mailto:klandon@moffattnichol.com">
           <span class="button-text">Contact Me</span>
@@ -132,7 +132,7 @@
             <img src="./assets/images/cb.jpg" class="project-image">
             <div class="project-card-text-container">
               <div class="subheader-text project-title">Coos Bay</div>
-              <div class="body-text project-card-text">Channel Design, ATON design, Jetty Repairs, and Propwash Analysis in Coos Bay Oregon.</div>
+              <div class="body-text project-card-text">Channel design, dredging design, ATON design, jetty repairs, and propwash analysis in Coos Bay, Oregon.</div>
             </div>
            <!-- <a class="button" href="./project-pages/project-template.html">
               <span class="button-text">Read More</span>
@@ -143,7 +143,7 @@
             <img src="./assets/images/piledikes.jpg" class="project-image">
             <div class="project-card-text-container">
               <div class="subheader-text project-title">Columbia River Pile Dike Repair</div>
-              <div class="body-text project-card-text">Design of repairs to numerous Lower Columbia River pile dike systems</div>
+              <div class="body-text project-card-text">Design of repairs to numerous Lower Columbia River pile dike systems in Oregon and Washington</div>
             </div>
            <!-- <a class="button" href="./project-pages/project-template.html">
               <span class="button-text">Read More</span>
