--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
       <div id="about-section">
         <span class="subheader-text">My Background / About Me</span>
         <div class="about-section-content">
-          <div class="body-text">I'm a Coastal Engineer with over 10 years of experience developing innovative approaches and designs to address a wide range of coastal problems. Common projects or analysis I conduct include SLR and coastal flooding analysis, wetland and beach restoration, erosion analysis, extreme value analysis for coastal hazards, GIS data collection and manipulation, channel design, dredging design, and design of shore protection structures</div>
+          <div class="body-text">I'm a Coastal Engineer with over 10 years of experience developing innovative approaches and designs to address a wide range of coastal problems. Common projects or analyses I conduct include SLR and coastal flooding analysis, wetland and beach restoration, erosion analysis, extreme value analysis for coastal hazards, GIS data collection and manipulation, channel design, dredging design, and design of shore protection structures</div>
           <div class="body-text">I graduated with a Master of Ocean Engineering from Oregon State University and Bachelor of Science in Civil Engineering from UC Davis. I've worked at M&N for over 10 years.</div>
         </div>
       </div>
