--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
       This should be the same across all pages.
      -->
 		
-	<!--
-    <link rel="icon" href="./assets/images/1311.png" />
+	
+    <link rel="icon" href="./assets/images/1311.png" />-->
 		<title>Kyle Landon</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
@@ -94,7 +94,7 @@
 		-->
         </div>
       </div>
-<!--
+
       <!-- PROJECTS / MY WORK SECTION -->
       <div id="my-work-section">
         <!-- TODO - Change the subheader-text to whatever you want the Projects section header to say -->
@@ -127,7 +127,7 @@
             <img src="./assets/images/cardiff.jpg" class="project-image">
             <div class="project-card-text-container">
               <div class="subheader-text project-title">Cardiff Living Shoreline</div>
-              <div class="body-text project-card-text">Burried cobble berm beach restoration project with XBEACH modeling in Cardiff, California</div>
+              <div class="body-text project-card-text"></div>
             </div>
            <!-- <a class="button" href="./project-pages/project-template.html">
               <span class="button-text">Read More</span>
@@ -137,8 +137,8 @@
           <div class="project-card">
             <img src="./assets/images/cb.jpg" class="project-image">
             <div class="project-card-text-container">
-              <div class="subheader-text project-title">Coos Bay</div>
-              <div class="body-text project-card-text">Channel design, dredging design, ATON design, jetty repairs, and propwash analysis in Coos Bay, Oregon.</div>
+              <div class="subheader-text project-title">Coos Bay Estuary</div>
+              <div class="body-text project-card-text"></div>
             </div>
            <!-- <a class="button" href="./project-pages/project-template.html">
               <span class="button-text">Read More</span>
@@ -148,8 +148,8 @@
           <div class="project-card">
             <img src="./assets/images/piledikes.jpg" class="project-image">
             <div class="project-card-text-container">
-              <div class="subheader-text project-title">Columbia River Pile Dike Repair</div>
-              <div class="body-text project-card-text">Design of repairs to numerous Lower Columbia River pile dike systems in Oregon and Washington</div>
+              <div class="subheader-text project-title">Columbia River Pile Dike System Repair</div>
+              <div class="body-text project-card-text"></div>
             </div>
            <!-- <a class="button" href="./project-pages/project-template.html">
               <span class="button-text">Read More</span>
@@ -160,7 +160,7 @@
         </div>
       </div>
     </div>
--->
+	
     <!-- FOOTER -->
     <div id="footer">
       <!-- 
