--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
      -->
 		
 	
-    <link rel="icon" href="./assets/images/1311.png" />-->
+   <!-- <link rel="icon" href="./assets/images/1311.png" />-->
 		<title>Kyle Landon</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
