Update project titles and descriptions in index.html
update projects.

--- a/vcard/index.html
+++ b/vcard/index.html
@@ -30,10 +30,10 @@ Seattle, WA 98101
             </h2> <div><div class="media image" style="background-color: rgb(255, 255, 255);"><div><img src="./media/coos_bay_and_north_bend,_or.jpeg" alt="Product image"> <div class="controls cardColor"><p class="title">
                       Coos Bay and North Bend, OR
                     </p></div></div> <!----> <!----></div></div><div><div class="media" style="background-color: rgb(255, 255, 255);"><p class="textC cardColor">Numerous projects within the Coos Bay Estuary. The projects include dredging design, ATON design, navigation channel design, shoreline analysis, and jetty repair.</p></div></div></div><div class="featured"><h2 class="section textColor">
-              Cardiff Living Shoreline
+              Engineering with Nature & Living Shorelines
             </h2> <div><div class="media image" style="background-color: rgb(255, 255, 255);"><div><img src="./media/cardiff,_ca.jpeg" alt="Product image"> <div class="controls cardColor"><p class="title">
-                      Cardiff, CA
-                    </p></div></div> <!----> <!----></div></div><div><div class="media" style="background-color: rgb(255, 255, 255);"><p class="textC cardColor">Living shoreline design and modeling using XBEACH. XBEACH was used to model the additional protection and resiliency provided by the cobble berm and dune restoration with respect to large storms and sea level rise.</p></div></div></div><div class="featured"><h2 class="section textColor">
+                      Dune Restoration
+                    </p></div></div> <!----> <!----></div></div><div><div class="media" style="background-color: rgb(255, 255, 255);"><p class="textC cardColor">Design of engineering with nature and living shoreline projects in California and Washington. Is often used XBEACH to model the additional protection and resiliency provided by the cobble berm and dune restoration with respect to large storms and sea level rise. Living shoreline designs of consist of cobble beach with large woody debris elements.</p></div></div></div><div class="featured"><h2 class="section textColor">
               Sea Level Rise &amp; Coastal Hazards Analysis
             </h2> <div><div class="media image" style="background-color: rgb(255, 255, 255);"><div><img src="./media/various_locations,_usa_west_coast.png" alt="Product image"> <div class="controls cardColor"><p class="title">
                       Various Locations, USA West Coast
